--- a/Day 3/numpyminiproject.ipynb
+++ b/Day 3/numpyminiproject.ipynb
@@ -62,11 +62,11 @@
    ],
    "source": [
     "# Load dataset\n",
-    "df = pd.read_csv('gold_price_data.csv')\n",
+    "df = pd.read_csv('../gold_price_data.csv')\n",
     "print(df)\n",
     "\n",
     "## solutions \n",
-    "df = pd.read_csv(\"gold_price_data.csv\")"
+    "df = pd.read_csv(\"../gold_price_data.csv\")"
    ]
   },
   {
