--- a/Day 4/Day 4 pandas.ipynb
+++ b/Day 4/Day 4 pandas.ipynb
@@ -303,7 +303,7 @@
    "source": [
     "# Reading from a csv \n",
     "## students_with_scores.csv\n",
-    "df = pd.read_csv(\"students_with_scores.csv\") # allows us to read the csv file with panda "
+    "df = pd.read_csv(\"../students_with_scores.csv\") # allows us to read the csv file with panda"
    ]
   },
   {
@@ -949,7 +949,7 @@
    ],
    "source": [
     "# load data \n",
-    "df_messy = pd.read_csv(\"students_data_messy.csv\")\n",
+    "df_messy = pd.read_csv(\"../students_data_messy.csv\")\n",
     "df_messy.head()"
    ]
   },
