--- a/Day 4/Untitled.ipynb
+++ b/Day 4/Untitled.ipynb
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "df_cars = pd.read_csv(\"messy_cars.csv\")\n",
+    "df_cars = pd.read_csv(\"../messy_cars.csv\")\n",
     "df_cars.head()"
    ]
   },
