--- a/Day 4/completed solutions for mini project.ipynb
+++ b/Day 4/completed solutions for mini project.ipynb
@@ -30,7 +30,7 @@
     "import numpy as np\n",
     "\n",
     "# Load dataset\n",
-    "df = pd.read_csv(\"gold_price_data.csv\")\n",
+    "df = pd.read_csv(\"../gold_price_data.csv\")\n",
     "\n",
     "# Extract the 'close' column as a NumPy array\n",
     "close_prices = df[\"close\"].to_numpy()"
