--- a/Day 4/panda_project.ipynb
+++ b/Day 4/panda_project.ipynb
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"sales_with_nans (3).csv\")\n",
+    "df = pd.read_csv(\"../sales_with_nans (3).csv\")\n",
     "df.head()"
    ]
   },
